# local-research-agent

./: .dockerignore  .env.template  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.host-ollama.yml  docker-compose.web.yml  docker-compose.yml  final_report.md  main.py  output.md  pyproject.toml  requirements.txt  run_web.py  scraper.py  searcher.py  spec.md  verify-docker.sh
.github/workflows/: docker-publish.yml
web/: models.py  report_store.py  runner.py  server.py
web/static/css/: style.css
web/static/js/: api.js  app.js  history.js  report.js  research.js
web/templates/: index.html
